<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:id="@+id/home_container" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/translate_world"
        android:layout_weight="1"/>
    <Button
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/start_new_conversation"
        android:background="@drawable/button_shape"
        android:layout_width="@dimen/start_buttons_width"
        android:layout_height="@dimen/start_buttons_height"
        android:layout_marginBottom="10dp" android:text="@string/start_new_conversation"/>
    <Button
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/start_new_translation"
        android:background="@drawable/button_shape"
        android:layout_width="@dimen/start_buttons_width"
        android:layout_height="@dimen/start_buttons_height"
        android:layout_marginBottom="10dp"
        android:text="@string/start_new_translation"/>
    <Button
        android:textSize="17sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/about"
        android:background="@drawable/button_shape"
        android:layout_width="@dimen/start_buttons_width"
        android:layout_height="@dimen/start_buttons_height"
        android:layout_marginBottom="24dp"
        android:text="@string/about"/>
</LinearLayout>
