<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="10dp"
        app:elevation="4dp"
        app:titleTextColor="@android:color/transparent">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:src="@drawable/back_btn"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:textSize="24sp"
        android:gravity="center"
        android:id="@+id/empty_view_not_connected"
        android:padding="32dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_internet_connection"/>
    <LinearLayout android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <Spinner
                android:id="@+id/spinner_language_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"/>
            <ImageView
                android:id="@+id/image_swap"
                android:layout_width="50dp"
                android:layout_height="70dp"
                android:src="@drawable/swap"/>
            <Spinner
                android:id="@+id/spinner_language_to"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/rectangle_two"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <EditText android:textSize="@dimen/translate_text_size"
                android:gravity="top"
                android:id="@+id/text_input"
                android:background="@android:color/transparent"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/hint_text"
                android:layout_weight="1"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/clear_text"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_clear_black_24dp"
                    app:tint="@android:color/darker_gray" />
                <View android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/image_listen"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/voice_icon"
                    app:tint="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:textSize="@dimen/translate_text_size"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:id="@+id/button_translate"
            android:background="@drawable/button_shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/new_translate" style="@style/Widget.AppCompat.Button.Borderless"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/rectangle_two"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:textSize="@dimen/translate_text_size"
                android:gravity="top"
                android:id="@+id/text_translated"
                android:padding="16dp"
                android:paddingBottom="30dp"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/image_speak"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_volume_up_black_24dp"
                    app:tint="@android:color/darker_gray" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
